// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse - success cases parses 0 1`] = `
NumLit {
  "data": Object {},
  "type": "NumLit",
  "value": 0,
}
`;

exports[`parse - success cases parses VApp's 1`] = `
VApp {
  "children": Array [
    Name {
      "data": Object {},
      "type": "Name",
      "value": "compose",
    },
    HApp {
      "children": Array [
        Name {
          "data": Object {},
          "type": "Name",
          "value": "note",
        },
        NumLit {
          "data": Object {},
          "type": "NumLit",
          "value": 1,
        },
      ],
      "data": Object {},
      "spaces": Array [
        " ",
      ],
      "type": "HApp",
    },
  ],
  "data": Object {},
  "extraSpaces": Array [
    "",
    "",
    "",
  ],
  "indent": 2,
  "type": "VApp",
}
`;

exports[`parse - success cases parses decimals 1`] = `
NumLit {
  "data": Object {},
  "type": "NumLit",
  "value": 0.5,
}
`;

exports[`parse - success cases parses multiple levels of parens 1`] = `
Paren {
  "children": Array [
    Paren {
      "children": Array [
        NumLit {
          "data": Object {},
          "type": "NumLit",
          "value": 1,
        },
      ],
      "data": Object {},
      "spaces": Array [
        " ",
        " ",
      ],
      "type": "Paren",
    },
  ],
  "data": Object {},
  "spaces": Array [
    " ",
    " ",
  ],
  "type": "Paren",
}
`;

exports[`parseParen parses unary lists 1`] = `
Paren {
  "children": Array [
    Name {
      "data": Object {},
      "type": "Name",
      "value": "foo",
    },
  ],
  "data": Object {},
  "spaces": Array [
    "",
    "",
  ],
  "type": "Paren",
}
`;

exports[`parseParen parses with application inside 1`] = `
Paren {
  "children": Array [
    HApp {
      "children": Array [
        Name {
          "data": Object {},
          "type": "Name",
          "value": "foo",
        },
        NumLit {
          "data": Object {},
          "type": "NumLit",
          "value": 1,
        },
        NumLit {
          "data": Object {},
          "type": "NumLit",
          "value": 2,
        },
        NumLit {
          "data": Object {},
          "type": "NumLit",
          "value": 1,
        },
      ],
      "data": Object {},
      "spaces": Array [
        " ",
        " ",
        " ",
      ],
      "type": "HApp",
    },
  ],
  "data": Object {},
  "spaces": Array [
    "",
    "",
  ],
  "type": "Paren",
}
`;

exports[`parseVApp parses indentation-based lists with one child 1`] = `
VApp {
  "children": Array [
    Name {
      "data": Object {},
      "type": "Name",
      "value": "foo",
    },
    Name {
      "data": Object {},
      "type": "Name",
      "value": "bar",
    },
  ],
  "data": Object {},
  "extraSpaces": Array [
    "",
    "",
    "",
  ],
  "indent": 2,
  "type": "VApp",
}
`;

exports[`parseVApp parses indentation-based lists with one child, with an extra new line 1`] = `
VApp {
  "children": Array [
    Name {
      "data": Object {},
      "type": "Name",
      "value": "foo",
    },
    Name {
      "data": Object {},
      "type": "Name",
      "value": "bar",
    },
  ],
  "data": Object {},
  "extraSpaces": Array [
    "",
    "
",
    "",
  ],
  "indent": 2,
  "type": "VApp",
}
`;

exports[`parseVApp parses indentation-based lists with one child, with two extra new lines 1`] = `
VApp {
  "children": Array [
    Name {
      "data": Object {},
      "type": "Name",
      "value": "foo",
    },
    Name {
      "data": Object {},
      "type": "Name",
      "value": "bar",
    },
  ],
  "data": Object {},
  "extraSpaces": Array [
    "",
    "

",
    "",
  ],
  "indent": 2,
  "type": "VApp",
}
`;

exports[`parseVApp parses nested indentation-based lists 1`] = `
VApp {
  "children": Array [
    Name {
      "data": Object {},
      "type": "Name",
      "value": "foo",
    },
    VApp {
      "children": Array [
        Name {
          "data": Object {},
          "type": "Name",
          "value": "bar",
        },
        Name {
          "data": Object {},
          "type": "Name",
          "value": "baz",
        },
        NumLit {
          "data": Object {},
          "type": "NumLit",
          "value": 1,
        },
      ],
      "data": Object {},
      "extraSpaces": Array [
        "",
        "",
        "",
        "",
        "",
      ],
      "indent": 4,
      "type": "VApp",
    },
    NumLit {
      "data": Object {},
      "type": "NumLit",
      "value": 2,
    },
  ],
  "data": Object {},
  "extraSpaces": Array [
    "",
    "",
    "",
    "",
    "",
  ],
  "indent": 2,
  "type": "VApp",
}
`;

exports[`parseVApp parses super nested indentation-based lists 1`] = `
VApp {
  "children": Array [
    Name {
      "data": Object {},
      "type": "Name",
      "value": "foo",
    },
    VApp {
      "children": Array [
        Name {
          "data": Object {},
          "type": "Name",
          "value": "bar",
        },
        VApp {
          "children": Array [
            Name {
              "data": Object {},
              "type": "Name",
              "value": "baz",
            },
            NumLit {
              "data": Object {},
              "type": "NumLit",
              "value": 1,
            },
          ],
          "data": Object {},
          "extraSpaces": Array [
            "",
            "",
            "",
          ],
          "indent": 6,
          "type": "VApp",
        },
      ],
      "data": Object {},
      "extraSpaces": Array [
        "",
        "",
        "",
      ],
      "indent": 4,
      "type": "VApp",
    },
    NumLit {
      "data": Object {},
      "type": "NumLit",
      "value": 2,
    },
  ],
  "data": Object {},
  "extraSpaces": Array [
    "",
    "",
    "",
    "",
    "",
  ],
  "indent": 2,
  "type": "VApp",
}
`;

exports[`parseVApp parses super nested indentation-based lists, with weird indentation 1`] = `
VApp {
  "children": Array [
    Name {
      "data": Object {},
      "type": "Name",
      "value": "foo",
    },
    VApp {
      "children": Array [
        Name {
          "data": Object {},
          "type": "Name",
          "value": "bar",
        },
        VApp {
          "children": Array [
            Name {
              "data": Object {},
              "type": "Name",
              "value": "baz",
            },
            NumLit {
              "data": Object {},
              "type": "NumLit",
              "value": 1,
            },
            NumLit {
              "data": Object {},
              "type": "NumLit",
              "value": 2,
            },
          ],
          "data": Object {},
          "extraSpaces": Array [
            "",
            "",
            "",
            "",
            "",
          ],
          "indent": 10,
          "type": "VApp",
        },
      ],
      "data": Object {},
      "extraSpaces": Array [
        "",
        "",
        "",
      ],
      "indent": 5,
      "type": "VApp",
    },
    NumLit {
      "data": Object {},
      "type": "NumLit",
      "value": 2,
    },
  ],
  "data": Object {},
  "extraSpaces": Array [
    "",
    "",
    "",
    "",
    "",
  ],
  "indent": 4,
  "type": "VApp",
}
`;
